Mejoras estéticas y funcionales

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -883,6 +883,14 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 01-Jun-2024},
 }
 
+@misc{ wiki:cross_val_series_temporales,
+  	author = {scikit-learn developers},
+  	title = {\emph{TimeSeriesSplit}},
+  	year = {2024},
+  	howpublished = {\url{https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.TimeSeriesSplit.html}},
+  	note = {Online; Accedido el 10-Jun-2024},
+}
+
 @book{ book:libertad_financiera,
 	title = {Inversión: Claves para alcanzar la libertad financiera},
     isbn = {979-8575532361},
