--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -104,7 +104,7 @@ Además, los siguientes recursos están accesibles a través de internet:
 \begin{itemize}
 \item
   \textbf{Repositorio}: 
-  Visitar \href{https://github.com/rmt0009alu/FAT}{https://github.com/rmt0009alu/FAT}.
+  Visitar \href{https://github.com/rmt0009alu/FAT}{FAT. GitHub}.
 \item
   \textbf{Documentación del código}: 
   Visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
