--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -18,6 +18,8 @@ En algunas fases del trabajo se desarrolló toda la estructura de formularios y 
 
 Una de las ventajas de cómo se planteó inicialmente la aplicación del \emph{Lab} es que permitiría ir acoplando nuevas utilidades según evolucionaran los requerimientos de los usuarios o clientes. Es decir, se pueden añadir nuevas funcionalidades como la de las redes LSTM, pero también, por ejemplo, se podría utilizar \emph{fbprophet}\citep{online:fbprophet} u otras técnicas de \emph{forecasting} que pudieran resultar interesantes. 
 
+En el laboratorio virtual, de forma adicional, se podría haber realizado algún tipo de técnica de validación cruzada para series temporales \citep{wiki:cross_val_series_temporales} al usar las estrategias de \emph{trading} basadas en \emph{machine learning}. El rendimiento podría disminuir y, por ello, no se utilizó este enfoque inicialmente, pero sería recomendable seguir esta idea en futuras implementaciones.
+
 Por otro lado, hay un conjunto importante de datos que me habría gustado recabar, que son todos los relativos a análisis fundamental\citep{wiki:analisis_fundamental}. Para la inclusión de este tipo de información también se puede utilizar la API de \texttt{yfinance}, aunque requeriría de nuevas bases de datos o, en el mejor de los casos, de una severa adaptación de las existentes. La inclusión de dichos datos podría ofrecer una visión mucho más completa a un posible inversor y facilitaría la toma de decisiones.
 
 Otra característica relevante que hay que señalar es que a lo largo de este trabajo se han utilizado bases de datos \emph{SQLite} por la fácil integración que hay con \emph{Django} pero, seguramente, en un entorno más profesional sería conveniente hacer una migración hacia un sistema gestor de bases de datos como \emph{PostgreSQL}. 
