--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -411,7 +411,7 @@
     \noindent\LARGE
     Presentado por \@author{}\\ 
     en Universidad de Burgos --- \@date{}\\
-    Tutor: \@tutor{}\\
+    Tutores: \@tutor{}\\
   }%
   \end{center}%
   \null
@@ -421,9 +421,11 @@
 
 
 % Datos de portada
-\title{título del TFG \\Documentación Técnica}
-\author{nombre alumno}
-\tutor{nombre tutor}
+\title{FAT: Financial Analysis Tool.
+Herramienta de análisis
+financiero. \\Documentación Técnica}
+\author{Rodrigo Merino Tovar}
+\tutor{Dr. José Ignacio Santos Martín y Dra. Virginia Ahedo García}
 \date{\today}
 
 \begin{document}
