--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -53,7 +53,8 @@
     number = {},
     pages = {1--40},
     volume = {},
-    doi = {10.1109/IEEESTD.1998.88286}
+    doi = {10.1109/IEEESTD.1998.88286},
+    author = {Institute of Electrical and Electronics Engineers}
 }
 
 @misc{ online:selenium,
