--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -407,7 +407,7 @@
 % Datos de portada
 \title{{\Huge FAT}\\[0.5cm]Financial Analysis Tool. Herramienta de análisis financiero.}
 \author{\nombre}
-\tutor{Dra. Virginia Ahedo García y\\ Dr. José Ignacio Santos Martín}
+\tutor{Dr. José Ignacio Santos Martín y\\ Dra. Virginia Ahedo García}
 \date{\today}
 
 \begin{document}
@@ -424,11 +424,11 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent Dña. Virginia Ahedo García y D. José Ignacio Santos Martín, profesores del departamento de Ingeniería de Organización, área de Organización de Empresas.
+\noindent D. José Ignacio Santos Martín y Dña. Virginia Ahedo García, profesores del departamento de Ingeniería de Organización, área de Organización de Empresas.
 
 \noindent Exponen:
 
-\noindent Que el alumno D. \nombre, con DNI 71286910C, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado ''FAT: Financial Analysis Tool. Herramienta de análisis financiero.''. 
+\noindent Que el alumno D. \nombre, con DNI 71286910C, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado \textbf{FAT: Financial Analysis Tool. Herramienta de análisis financiero}. 
 
 \noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección de los que suscriben, en virtud de lo cual se autoriza su presentación y defensa.
 
@@ -442,14 +442,14 @@ En Burgos, {\large \today}
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del Tutor:\\[2cm]
-Dña. Virginia Ahedo García
+D. José Ignacio Santos Martín
 \end{flushleft}
 \end{minipage}
 \hfill
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del co-tutor:\\[2cm]
-D. José Ignacio Santos Martín
+Dña. Virginia Ahedo García
 \end{flushleft}
 \end{minipage}
 \hfill
