--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -108,6 +108,11 @@ Además, los siguientes recursos están accesibles a través de internet:
 \item
   \textbf{Documentación del código}: 
   Visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
+\item 
+  \textbf{Logs de calidad de código}: La calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \hreaf{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{Último informe de \texttt{pylint}}.
+\item
+  \textbf{Cobertura de código}: La cobertura de los tests se a medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible consultar un informe con detalles adicionales. Visitar \href{}{}
+
 \end{itemize}
 
 
