--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -93,6 +93,7 @@ Los materiales que se adjuntan con la memoria son:
 
 \begin{itemize}
 \item
+	\textbf{Anexos}: 
 	\textbf{Herramienta web}:
 	Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto una página web para que el usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
 \item	
@@ -111,7 +112,7 @@ Además, los siguientes recursos están accesibles a través de internet:
 \item 
   \textbf{Logs de calidad de código}: La calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \hreaf{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{Último informe de \texttt{pylint}}.
 \item
-  \textbf{Cobertura de código}: La cobertura de los tests se a medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible consultar un informe con detalles adicionales. Visitar \href{}{}
+  \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158144/artifacts/1586067173}{Último informe de \texttt{coverage}}.
 
 \end{itemize}
 
